css fixes and moved modal max-width to desktop media query to look better on mobile

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,7 @@
+/* --------------------------------- */
+/* BASE */
+/* --------------------------------- */
+
 :root {
     --body-bg-1: #45D0FF;
     --body-bg-2: #FF67E3;
@@ -33,7 +37,7 @@ html {
 
 body {
   position: relative;
-  background: linear-gradient(
+  background: var(--body-bg-1) linear-gradient(
       135deg,
       var(--body-bg-1),
       var(--body-bg-2)
@@ -61,7 +65,6 @@ h2 {
     font-weight: 800;
 }
 
-
 /* Scrollbar */
 
 ::-webkit-scrollbar {
@@ -85,7 +88,6 @@ h2 {
     border-radius: 5px;
     height: 60vh;
     width: 100%;
-    max-width: 60vw;
 }
 
 #dialogContent {
