--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -1,3 +1,7 @@
+/* --------------------------------- */
+/* MEDIA QUERIES */
+/* --------------------------------- */
+
 /* Tablet */
 @media screen and (min-width: 530px) {
   .question {
@@ -9,6 +13,10 @@
 @media screen and (min-width: 900px) {
   .timer-progress {
     max-width: 90rem;
+  }
+
+  #dialog {
+    max-width: 60vw;
   }
 }
 
